etc/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    #cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - tids-skillsmatrixapp.com
    secretName: nginxsecret-tls
  rules:
  - host: tids-skillsmatrixapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80
      - path: /api/tm
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 3001
      - path: /api/tl
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 3001
      - path: /api/mgr
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 3001
